Bug 160260 - Draw PDF import shows message "This PDF file is encrypted and can't be opened." if Windows account contains special character
Summary: Draw PDF import shows message "This PDF file is encrypted and can't be opened...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.5.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords:
: 137303 158718 (view as bug list)
Depends on:
Blocks: PDF-Import-Draw
  Show dependency treegraph
 
Reported: 2024-03-18 17:26 UTC by konsulas
Modified: 2024-06-20 05:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description konsulas 2024-03-18 17:26:18 UTC
Description:
I'm from Lithuania and our alphabet contains same special letters ąčęėįšųūž... etc. My name is Arūnas so this name contains letter 'ū'. If I create Windows 10 local account with my name Arūnas, I noticed that LibreOffice Draw cant open any pdf file. Instead I got blank new page with text inside "This PDF file is encrypted and can't be opened." But if I create Windows account with username Arunas with letter u instead of ū, pdf files starts opening normally. 

Steps to Reproduce:
1.Create Windows local account with username Arūnas
2.Sing in with new account into Windows.
3.Open pdf file in LibreOffice Draw

Actual Results:
Opens blank new document with text "This PDF file is encrypted and can't be opened."

Expected Results:
Should open pdf file in edit mode. 


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.5.2 (X86_64) / LibreOffice Community
Build ID: 38d5f62f85355c192ef5f1dd47c5c0c0c6d6598b
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: lt-LT (lt_LT); UI: en-US
Calc: CL threaded

I noticed, people report same bug with locales es (Spain) and jp (Japan). Maybe they also use Windows account with some special letters.

https://bugs.documentfoundation.org/show_bug.cgi?id=137303
https://bugs.documentfoundation.org/show_bug.cgi?id=158718
Comment 1 BogdanB 2024-03-24 14:34:49 UTC
Please, let the bug in Unconfirmed status, until someone else can confirm it.
Comment 2 Stéphane Guillou (stragu) 2024-04-03 01:05:19 UTC
Thanks for the report, Aruñas, what a great find!

I just tested on Windows 11 and could reproduce, using the account username "Aruñas" as well. Opening a PDF in Draw 24.2 works with account "Quickemu", and comes up as "encrypted" with account "Aruñas".

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 4; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

On Ubuntu 22.04 + GNOME 42.9, I was not able to create an account with a special character, so could not reproduce. (I tried "Stéphane" and "Aruñas".)

I asked in bug 158718 if their account name also has special characters.
Comment 3 Stéphane Guillou (stragu) 2024-04-03 01:07:17 UTC
To test on Windows, note that you can create a local account without needing an online account by disconnecting from the Internet. Settings > Accounts > Other Users > Add Account.
Comment 4 Mike Kaganski 2024-04-03 08:03:08 UTC
https://gerrit.libreoffice.org/c/core/+/165735
Comment 5 Commit Notification 2024-04-03 20:11:50 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7b9905df455b47977968a185a7c43f35541e018b

tdf#160260: make poppler wrapper executable Unicode-aware on Windows

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2024-04-04 00:40:27 UTC
*** Bug 137303 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2024-04-04 06:29:44 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cc895651302dc42dfb91ef06c41872d9dae8dd44

Related: tdf#160260 Drop xpdfimport.err.pdf, let PDF import return false

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-04-05 08:50:49 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/4ad24b828b77b9ebbaf09a08eafa52093349c32f

tdf#160260: make poppler wrapper executable Unicode-aware on Windows

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Stéphane Guillou (stragu) 2024-06-20 05:35:13 UTC
*** Bug 158718 has been marked as a duplicate of this bug. ***