tdf#160260: make poppler wrapper executable Unicode-aware on Windows

Change-Id: I76dc31ee14d1794fa73f990e641540ff941c7201
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165735
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 7b9905df455b47977968a185a7c43f35541e018b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165717
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>